# py_wallet-snapshot-service

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  main-build.yml  release.yml
alembic/: env.py
alembic/versions/: 20260628_0001_create_snapshot_tables.py  20260710_0002_repair_snapshot_schema_drift.py  20260722_0003_add_snapshot_job_leases.py
app/: __init__.py  config.py  db.py  enums.py  logging_config.py  main.py  metrics.py
app/api/: auth.py  debug.py  health.py  internal_jobs.py  metrics.py
app/models/: __init__.py  external.py  snapshots.py
app/scheduler/: __init__.py  loop.py
app/schemas/: debug.py  health.py  jobs.py
app/services/: chain_config.py  evm_collector.py  job_service.py  manual_collector.py  price_service.py  retry_policy.py  snapshot_processor.py  wallet_loader.py
app/worker/: __init__.py  claim.py  loop.py
tests/: conftest.py  test_config.py  test_debug_balance.py  test_evm_collector.py  test_health.py  test_job_api.py  test_manual_wallets.py  test_partial_success.py  test_release_version.py  test_scheduler.py  test_wallet_loader.py  test_worker_claim.py  test_worker_loop.py
